--- a/package.json
+++ b/package.json
@@ -7,20 +7,33 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "gh-pages -d dist"
   },
   "private": true,
+  "homepage": "https://namangupta89.github.io/myangapp",
   "dependencies": {
-    "@angular/animations": "~7.2.0",
+    "@agm/core": "^1.0.0-beta.5",
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "^7.3.2",
+    "@angular/material-moment-adapter": "^7.3.2",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/angularfire": "^0.8.33",
+    "angular-router-animations": "0.0.4",
+    "angularfire": "^2.3.0",
+    "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "firebase": "^5.8.3",
+    "hammerjs": "^2.0.8",
+    "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
