--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "angular-router-animations": "0.0.4",
     "angularfire": "^2.3.0",
     "angularfire2": "^5.1.1",
+    "canvasjs": "^1.8.1",
     "core-js": "^2.5.4",
     "firebase": "^5.8.3",
     "hammerjs": "^2.0.8",
