--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://namangupta89.github.io/myangapp",
   "dependencies": {
     "@agm/core": "^1.0.0-beta.5",
+    "@amcharts/amcharts4": "^4.1.14",
     "@angular/animations": "^7.2.4",
     "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
@@ -27,6 +28,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@types/angularfire": "^0.8.33",
+    "amcharts-angular": "^1.1.0",
     "angular-router-animations": "0.0.4",
     "angularfire": "^2.3.0",
     "angularfire2": "^5.1.1",
@@ -34,6 +36,7 @@
     "core-js": "^2.5.4",
     "firebase": "^5.8.3",
     "hammerjs": "^2.0.8",
+    "install": "^0.12.2",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
